upando para poder mecher no pc pessoal

--- a/index2.html
+++ b/index2.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto Organicos</title>
 
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+  <div class="container" ><img src="./static/img/banner4.jpg" alt="fazendinha_banner" ></div>
     <nav>
         <ul class="container">
-          <li><a href='#'>Home</a></li>
+          <li><a href='#'>Projeto Organicos</a></li>
           <li class='dropdown'>
             <a href='#'>Cadastro <i class="fa fa-angle-down"></i></a>
             <div class='mega-menu'>
