alterações no index2

--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-  <div class="container" ><img src="./static/img/banner4.jpg" alt="fazendinha_banner" ></div>
+  <div class="container" ><img src="./static/img/banner4sl.jpg" alt="fazendinha_banner" ></div>
     <nav>
         <ul class="container">
           <li><a href='#'>Projeto Organicos</a></li>
