Anexado link ao menu cadastro novo

--- a/static/index2.html
+++ b/static/index2.html
@@ -20,7 +20,7 @@
                 <div class="item">
                     <h3>Menu de Cadastro</h3>
                     <ul>
-                      <li><a href='C:/Users/jop_garcia/Documents/Projeto-_Organicos-1/static/formulario.html'>Cadastrar Produtos</a></li>
+                      <li><a href='formulario.html'>Cadastrar Produtos</a></li>
                       <li><a href='#'>Listar Produtos Cadastrados</a></li>
                       <li><a href='#'>Excluir Produtos </a></li>
                     </ul>
