--- a/static/index.html
+++ b/static/index.html
@@ -17,9 +17,16 @@
         .box{
             width: 20%;
             height: 100px;
-            background-color: red;
+            background-color: #127147;
             border: 1px black solid;
         }
+        .boxf{
+          width: fit-content;
+          height: 30px;
+          background-color: #127147;
+          border: 1px black solid;
+          margin: 0;
+      }
     </style>
 </head>
 <body><div class="container"><img src="banner4sl.jpg" alt="fazendinha_banner"></div>
@@ -68,6 +75,11 @@
         <div class="box"></div>
         <div class="box"></div>
     </div>
-    
+    <div class="containers">
+      <div class="boxf" >
+        <img src="footer4sl.jpg" alt="">
+      </div>
+      
+  </div>
 </body>
 </html>
