Adição de produtos no estoque funcionando

--- a/static/formulario.html
+++ b/static/formulario.html
@@ -43,6 +43,7 @@
             <br>
             <br>
             <input type="submit" value="Enviar" id="enviar">
+            <a href="index2.html">Voltar</a>
             
         </fieldset>
     </form>
