--- a/static/index2.html
+++ b/static/index2.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container"><img src="banner4sl.jpg" alt="fazendinha_banner"></div>
+  <div class="container"><img src="banner4sl.jpg" alt="fazendinha_banner" width="520"></div>
   <nav>
     <ul class="container">
       <li><a href='#'>Projeto Organicos</a></li>
