--- a/static/index2.html
+++ b/static/index2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="container"><img src="banner4sl.jpg" alt="fazendinha_banner" width="520"></div>
+  <div class="container"><img src="banner4sl.jpg" alt="fazendinha_banner" width="100%">
   <nav>
     <ul class="container">
       <li><a href='#'>Projeto Organicos</a></li>
@@ -49,6 +49,7 @@
               </ul>
     </ul><!-- .container -->
   </nav>
+</div>
 </body>
 
 </html>
