--- a/static/index2.html
+++ b/static/index2.html
@@ -33,7 +33,7 @@
             <div class="item">
               <h3>Menu de Vendas</h3>
               <ul>
-                <li><a href='#'>Adicionar Item</a></li>
+                <li><a href='Carrinho.html'>Adicionar Item ao Carrinho</a></li>
                 <li><a href='#'>Remover de Item</a></li>
                 <li><a href='#'>Finalizar a Compra</a></li>
                 <li><a href='#'>Visualizar Itens</a></li>
