--- a/static/index2.html
+++ b/static/index2.html
@@ -15,7 +15,7 @@
     <ul class="container">
       <li><a href='#'>Projeto Organicos</a></li>
       <li class='dropdown'>
-        <a href='#'>Cadastro <i class="fa fa-angle-down"></i></a>
+        <a href='cadastro.html'>Cadastro <i class="fa fa-angle-down"></i></a>
         <div class='mega-menu'>
           <div class="container">
             <div class="item">
@@ -27,7 +27,7 @@
               </ul>
 
       <li class='dropdown'>
-        <a href='#'>Vendas <i class="fa fa-angle-down"></i> </a>
+        <a href='vendas.html'>Vendas <i class="fa fa-angle-down"></i> </a>
         <div class='mega-menu'>
           <div class="container">
             <div class="item">
@@ -45,7 +45,7 @@
           <div class="container">
             <div class="item">
               <ul>
-                <li><a href='#'>Exibir Relatório</a></li>
+                <li><a href='relatorio.html'>Exibir Relatório</a></li>
               </ul>
     </ul><!-- .container -->
   </nav>
