Iniciei criacao de lista.html

--- a/static/index2.html
+++ b/static/index2.html
@@ -22,7 +22,7 @@
               <h3>Menu de Cadastro</h3>
               <ul>
                 <li><a href='formulario.html'>Cadastrar Produtos</a></li>
-                <li><a href='#'>Listar Produtos Cadastrados</a></li>
+                <li><a href='../lista.html'>Listar Produtos Cadastrados</a></li>
                 <li><a href='#'>Excluir Produtos </a></li>
               </ul>
 
