Remover Itens do carrinho feito e testado

--- a/static/index2.html
+++ b/static/index2.html
@@ -34,7 +34,7 @@
               <h3>Menu de Vendas</h3>
               <ul>
                 <li><a href='Carrinho.html'>Adicionar Item ao Carrinho</a></li>
-                <li><a href='#'>Remover de Item</a></li>
+                <li><a href='remover.html'>Remover de Item</a></li>
                 <li><a href='#'>Finalizar a Compra</a></li>
                 <li><a href='#'>Visualizar Itens</a></li>
               </ul>
