Exclusão de produtos do estoque feito e testado

--- a/static/index2.html
+++ b/static/index2.html
@@ -23,7 +23,7 @@
               <ul>
                 <li><a href='formulario.html'>Cadastrar Produtos</a></li>
                 <li><a href='../lista.html'>Listar Produtos Cadastrados</a></li>
-                <li><a href='#'>Excluir Produtos </a></li>
+                <li><a href='removerEstoque.html'>Excluir Produtos </a></li>
               </ul>
 
       <li class='dropdown'>
