--- a/static/index2.html
+++ b/static/index2.html
@@ -21,7 +21,7 @@
             <div class="item">
               <h3>Menu de Cadastro</h3>
               <ul>
-                <li><a href='formulario.html'>Cadastrar Produtos</a></li>
+                <li><a href='cadastro.html'>Cadastrar Produtos</a></li>
                 <li><a href='../lista.html'>Listar Produtos Cadastrados</a></li>
                 <li><a href='removerEstoque.html'>Excluir Produtos </a></li>
               </ul>
