--- a/static/Layout2/index2.html
+++ b/static/Layout2/index2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div><img src="banner4sl.jpg" alt="fazendinha_banner" width="100%">
+  <div><img src="./img/logo1.png" alt="fazendinha_banner" >
   <nav>
     <ul class="container">
       <li><a href='#'>Projeto Organicos</a></li>
