--- a/static/lista.html
+++ b/static/lista.html
@@ -10,7 +10,7 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td>maï¿½a</td>
+      <td>maça</td>
       <td>4</td>
       <td>50</td>
     </tr>
@@ -46,21 +46,21 @@
     </tr>
     <tr>
       <th>6</th>
-      <td>pao</td>
-      <td>1</td>
+      <td>manga</td>
+      <td>8</td>
       <td>50</td>
     </tr>
     <tr>
       <th>7</th>
-      <td>manga</td>
-      <td>7</td>
-      <td>45</td>
-    </tr>
-    <tr>
-      <th>8</th>
       <td>leite</td>
       <td>10</td>
       <td>70</td>
+    </tr>
+    <tr>
+      <th>8</th>
+      <td>ovos</td>
+      <td>10</td>
+      <td>60</td>
     </tr>
   </tbody>
 </table>
