Inclui na landing page o caminho para entrar na loja

--- a/static/Layout2/Landing_page.html
+++ b/static/Layout2/Landing_page.html
@@ -19,7 +19,7 @@
 
         <main class="main">
             <div class="credit">
-                <a href="">Entar na Loja</a>
+                <a href="index2.html">Entrar na Loja</a>
             </div>
         </main>
 
