Adicionado botao voltar em todos

--- a/static/Layout2/cadastro.html
+++ b/static/Layout2/cadastro.html
@@ -31,7 +31,11 @@
             <br>
             <div id="btn">       
                 <button type="submit">Cadastrar</button>
-            </div>   
+            </div>
+            <br>
+            <div id="btn">       
+                <button type="submit">Voltar</button>
+            </div>     
 
         </form>
     </div>
