--- a/static/Layout2/formulario.html
+++ b/static/Layout2/formulario.html
@@ -30,6 +30,10 @@
             <div id="btn">
                 <button type="submit">Enviar</button>
             </div>
+            <br>
+            <div id="btn">       
+                <button type="submit">Voltar</button>
+            </div>
 
         </form>
     </div>
