--- a/static/Layout2/carrinho.html
+++ b/static/Layout2/carrinho.html
@@ -29,6 +29,10 @@
             <div id="btn">
                 <button type="submit">Enviar</button>
             </div>
+            <br>
+            <div id="btn">       
+                <button type="submit">Voltar</button>
+            </div>  
 
         </form>
     </div>
