--- a/static/cadastro.html
+++ b/static/cadastro.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="Layout.css">
     <title>Cadastro</title>
 </head>
 <body>
     <div id="form">
         <form action="/cadastrarProdutos" method="get">
+            <img src="./logo1.png" alt="" height="70" >
             <h2 class="title"> Cadastro de Produto</h2>
             
             <label for="campo1"> Produto: </label>
@@ -30,7 +31,11 @@
             <br>
             <div id="btn">       
                 <button type="submit">Cadastrar</button>
-            </div>   
+            </div>
+            <br>
+            <div id="btn">       
+                <button type="submit">Voltar</button>
+            </div>     
 
         </form>
     </div>
