--- a/static/index2.html
+++ b/static/index2.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-  <div><img src="banner4sl.jpg" alt="fazendinha_banner" width="100%">
   <nav>
     <ul class="container">
       <li><a href='#'>Projeto Organicos</a></li>
@@ -22,7 +21,7 @@
               <h3>Menu de Cadastro</h3>
               <ul>
                 <li><a href='cadastro.html'>Cadastrar Produtos</a></li>
-                <li><a href='/lista'>Listar Produtos Cadastrados</a></li>
+                <li><a href='../lista.html'>Listar Produtos Cadastrados</a></li>
                 <li><a href='removerEstoque.html'>Excluir Produtos </a></li>
               </ul>
 
