--- a/static/Landing_page.html
+++ b/static/Landing_page.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="./css/reset.min.css">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Projeto Organicos</title>
+    <title>SGOP - Organicos</title>
 </head>
 <body>
     <div class="container">
 
         <header class="header">
-            <h1>Nossos Produtos São de Origem Orgânica, Entre e Comprove !!</h1>
+            <h1>SGPO - Sistema de Gerenciamento de Produtos Organicos</h1>
         </header>
 
         <main class="main">
             <div class="credit">
-                <a href="index2.html">Entrar na Loja</a>
+                <a href="index2.html">Entrar</a>
             </div>
         </main>
 
