--- a/static/Landing_page.html
+++ b/static/Landing_page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/reset.min.css">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>SGOP - Organicos</title>
+    <title>SGPO - Organicos</title>
 </head>
 <body>
     <div class="container">
