Alterado o debug e link lista

--- a/static/index2.html
+++ b/static/index2.html
@@ -21,7 +21,7 @@
               <h3>Menu de Cadastro</h3>
               <ul>
                 <li><a href='cadastro.html'>Cadastrar Produtos</a></li>
-                <li><a href='../lista.html'>Listar Produtos Cadastrados</a></li>
+                <li><a href='/lista'>Listar Produtos Cadastrados</a></li>
                 <li><a href='removerEstoque.html'>Excluir Produtos </a></li>
               </ul>
 
