troca das telas

--- a/static/index2.html
+++ b/static/index2.html
@@ -12,7 +12,6 @@
 <body>
   <nav>
     <ul class="container">
-      <li><a href='#'>Projeto Organicos</a></li>
       <li class='dropdown'>
         <a href='cadastro.html'>Cadastro <i class="fa fa-angle-down"></i></a>
         <div class='mega-menu'>
@@ -22,11 +21,11 @@
               <ul>
                 <li><a href='cadastro.html'>Cadastrar Produtos</a></li>
                 <li><a href='/lista'>Listar Produtos Cadastrados</a></li>
-                <li><a href='removerEstoque.html'>Excluir Produtos </a></li>
+                <li><a href='removerEstoque2.html'>Excluir Produtos </a></li>
               </ul>
 
       <li class='dropdown'>
-        <a href='vendas.html'>Vendas <i class="fa fa-angle-down"></i> </a>
+        <a href='Carrinho.html'>Vendas <i class="fa fa-angle-down"></i> </a>
         <div class='mega-menu'>
           <div class="container">
             <div class="item">
@@ -34,8 +33,8 @@
               <ul>
 
                 <li><a href='Carrinho.html'>Adicionar Item ao Carrinho</a></li>
-                <li><a href='remover.html'>Remover de Item</a></li>
-                <li><a href='#'>Finalizar a Compra</a></li>
+                <li><a href='removerCarrinho.html'>Remover de Item</a></li>
+                <li><a href='/fecharVenda'>Finalizar a Compra</a></li>
 
                 <li><a href='#'>Visualizar Itens</a></li>
               </ul>
