--- a/static/index2.html
+++ b/static/index2.html
@@ -36,7 +36,7 @@
                 <li><a href='removerCarrinho.html'>Remover de Item</a></li>
                 <li><a href='/fecharVenda'>Finalizar a Compra</a></li>
 
-                <li><a href='#'>Visualizar Itens</a></li>
+                <li><a href='/listar/carrinho'>Visualizar Itens</a></li>
               </ul>
 
       <li class='dropdown'>
