Inclui função voltar nas paginas e centralizei os menus

--- a/static/removerCarrinho.html
+++ b/static/removerCarrinho.html
@@ -26,8 +26,8 @@
                 <button type="submit">Enviar</button>
             </div>
             <br>
-            <div id="btn">       
-                <button type="submit">Voltar</button>
+            <div id="btn"><a href="index2.html">       
+                <button type="button" >Voltar</button></a>
             </div>
 
         </form>
