--- a/static/Carrinho.html
+++ b/static/Carrinho.html
@@ -30,8 +30,8 @@
                 <button type="submit">Enviar</button>
             </div>
             <br>
-            <div id="btn">       
-                <button type="submit">Voltar</button>
+            <div id="btn"><a href="index2.html">       
+                <button type="button" >Voltar</button></a>
             </div>  
 
         </form>
