--- a/static/cadastro.html
+++ b/static/cadastro.html
@@ -33,8 +33,8 @@
                 <button type="submit">Cadastrar</button>
             </div>
             <br>
-            <div id="btn">       
-                <button type="submit">Voltar</button>
+            <div id="btn"><a href="index2.html">       
+                <button type="button" >Voltar</button></a>
             </div>
             
         </form>
